--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,21 @@
 spring:
   cloud:
+    discovery:
+      enabled: true
     config:
       server:
         git:
           uri: https://github.com/asdrian44/configserver
 server:
   port: 0
+
+
+eureka:
+  client:
+    healthcheck:
+      enabled: true
+    serviceUrl:
+      defaultZone: https://eureka-server-spring.herokuapp.com/eureka/
+    fetch-registry: true
+    register-with-eureka: true
 
