--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,7 @@ eureka:
       defaultZone: https://eureka-server-spring.herokuapp.com/eureka
 server:
   port: 0
+
+spring:
+  application:
+    name: config-server
