--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@
 eureka:
   instance:
     hostname: https://config-sulluscocha.herokuapp.com/
+    non-secure-port: 80
   client:
     fetch-registry: true
     register-with-eureka: true
