--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,14 @@
-eureka:
-  instance:
-    nonSecurePort: 80
-  client:
-    fetchRegistry: true
-    registerWithEureka: true
-    serviceUrl:
-      defaultZone: https://eureka-server-spring.herokuapp.com/eureka
+spring:
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/asdrian44/configserver
 server:
   port: 0
 
-spring:
-  application:
-    name: config-server
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: https://eureka-server-spring.herokuapp.com/eureka/
