--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 eureka.instance.non-secure-port=80
 eureka.instance.hostname=config-sulluscocha.herokuapp.com
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=false
 spring.application.name=config-service
