--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 eureka.instance.non-secure-port=80
 eureka.instance.hostname=config-sulluscocha.herokuapp.com
-eureka.client.fetch-registry=false
-eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.healthcheck.enabled=true
 spring.application.name=config-service
+spring.cloud.discovery.enabled=true
+
